[tool.poetry]
name = "pdfchain"
version = "0.1.0"
description = "Let LLMs understand pdf files easily"
authors = ["Raise Lab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfminer-six = "^20231228"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.7.0"
bandit = "^1.7.8"
vulture = "^2.11"
mypy = "^1.9.0"
codespell = "^2.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
